--- a/fonts/font-awesome-4.7.0/less/icons.less
+++ b/fonts/font-awesome-4.7.0/less/icons.less
@@ -4,7 +4,7 @@
 .@{fa-css-prefix}-glass:before { content: @fa-var-glass; }
 .@{fa-css-prefix}-music:before { content: @fa-var-music; }
 .@{fa-css-prefix}-search:before { content: @fa-var-search; }
-.@{fa-css-prefix}-envelope-o:before { content: @fa-var-envelope-o; }
+.@{fa-css-prefix}--o:before { content: @fa-var--o; }
 .@{fa-css-prefix}-heart:before { content: @fa-var-heart; }
 .@{fa-css-prefix}-star:before { content: @fa-var-star; }
 .@{fa-css-prefix}-star-o:before { content: @fa-var-star-o; }
@@ -223,7 +223,7 @@
 .@{fa-css-prefix}-sort-desc:before { content: @fa-var-sort-desc; }
 .@{fa-css-prefix}-sort-up:before,
 .@{fa-css-prefix}-sort-asc:before { content: @fa-var-sort-asc; }
-.@{fa-css-prefix}-envelope:before { content: @fa-var-envelope; }
+.@{fa-css-prefix}-:before { content: @fa-var-; }
 .@{fa-css-prefix}-linkedin:before { content: @fa-var-linkedin; }
 .@{fa-css-prefix}-rotate-left:before,
 .@{fa-css-prefix}-undo:before { content: @fa-var-undo; }
@@ -422,7 +422,7 @@
 .@{fa-css-prefix}-plus-square-o:before { content: @fa-var-plus-square-o; }
 .@{fa-css-prefix}-space-shuttle:before { content: @fa-var-space-shuttle; }
 .@{fa-css-prefix}-slack:before { content: @fa-var-slack; }
-.@{fa-css-prefix}-envelope-square:before { content: @fa-var-envelope-square; }
+.@{fa-css-prefix}--square:before { content: @fa-var--square; }
 .@{fa-css-prefix}-wordpress:before { content: @fa-var-wordpress; }
 .@{fa-css-prefix}-openid:before { content: @fa-var-openid; }
 .@{fa-css-prefix}-institution:before,
@@ -733,8 +733,8 @@
 .@{fa-css-prefix}-fa:before,
 .@{fa-css-prefix}-font-awesome:before { content: @fa-var-font-awesome; }
 .@{fa-css-prefix}-handshake-o:before { content: @fa-var-handshake-o; }
-.@{fa-css-prefix}-envelope-open:before { content: @fa-var-envelope-open; }
-.@{fa-css-prefix}-envelope-open-o:before { content: @fa-var-envelope-open-o; }
+.@{fa-css-prefix}--open:before { content: @fa-var--open; }
+.@{fa-css-prefix}--open-o:before { content: @fa-var--open-o; }
 .@{fa-css-prefix}-linode:before { content: @fa-var-linode; }
 .@{fa-css-prefix}-address-book:before { content: @fa-var-address-book; }
 .@{fa-css-prefix}-address-book-o:before { content: @fa-var-address-book-o; }
