--- a/fonts/font-awesome-4.7.0/scss/_screen-reader.scss
+++ b/fonts/font-awesome-4.7.0/scss/_screen-reader.scss
@@ -2,4 +2,4 @@
 // -------------------------
 
 .sr-only { @include sr-only(); }
-.sr-only-focusable { @include sr-only-focusable(); }
+.sr-only-sable { @include sr-only-sable(); }
